# kilar

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  homebrew-tap-README.md
.cargo/: config.toml
.claude/commands/: serena.md
.github/workflows/: ci.yml  release.yml  update-formula.yml
.serena/: project.yml
Formula/: kilar.rb
benches/: port_performance.rs
docs/: HOMEBREW_SETUP.md  SPEC.md  TODO.md
scripts/: setup-homebrew-tap.sh  update-formula.sh
src/: cli.rs  error.rs  lib.rs  main.rs
src/commands/: check.rs  kill.rs  list.rs  list_v2.rs  list_watch.rs  mod.rs
src/port/: adaptive.rs  incremental.rs  mod.rs  procfs.rs
src/process/: mod.rs
src/utils/: validation.rs
tests/: integration_test.rs
