[package]
name = "kilar"
version = "0.1.0"
edition = "2021"
authors = ["polidog"]
description = "A CLI tool for managing port processes"
license = "MIT"
repository = "https://github.com/polidog/kilar"
keywords = ["cli", "port", "process", "network", "development"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.1"
dialoguer = "0.11"
tokio = { version = "1.40", features = ["full"] }
anyhow = "1.0"

[profile.release]
lto = true
codegen-units = 1
strip = true
