[package]
name = "kilar"
version = "0.2.1"
edition = "2021"
authors = ["polidog <polidog@example.com>"]
description = "A powerful CLI tool for managing port processes - quickly find and terminate processes using specific ports"
license = "MIT"
repository = "https://github.com/polidog/kilar"
homepage = "https://github.com/polidog/kilar"
documentation = "https://docs.rs/kilar"
readme = "README.md"
keywords = ["cli", "port", "process", "network", "development"]
categories = ["command-line-utilities", "development-tools"]
include = [
    "src/**/*",
    "tests/**/*",
    "Cargo.toml",
    "README.md",
    "CONTRIBUTING.md",
    "LICENSE*"
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.1"
dialoguer = "0.11"
tokio = { version = "1.40", features = ["full"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
indicatif = "0.17"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
tempfile = "3.21.0"

[[bench]]
name = "port_performance"
harness = false

[profile.release]
lto = true
codegen-units = 1
strip = true
